sumo/tests/marouter/errors/incomplete_connections/to_missing2of2_allowed/errors.marouter
Error: District '2' has no sink.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
Warning: No connection between edge '2-source' and edge '1-sink' found.
